Minor change to fallback font for H1

--- a/css/main.css
+++ b/css/main.css
@@ -447,7 +447,7 @@ a {
 }
    
 h1 {
-  font-family: abeezeeregular, Futura, sans-serif;
+  font-family: abeezeeregular, arial, sans-serif;
   text-align: center;
   display: inline-block;
   color: #004f7d;
