--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@
   }
   header {
     background-color: #004f7d !important;
+    margin-top: 30px !important;
   }
   footer {
     margin-left: 20px !important;
@@ -168,6 +169,9 @@
   #headerdiv {
     display: inline-block !important;
     box-sizing: border-box !important;
+  }
+  #topbar {
+    display: block !important;
   }
   #skill_list {
     display: block !important;
@@ -731,6 +735,7 @@ nav a:hover {
   height: 100%;
   top: 100px;
   left: 0;
+  cursor: pointer;
 }
 
 .moreinfo {
@@ -1001,6 +1006,20 @@ nav a:hover {
   background-color: #fff568;
   color: black;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+}
+
+#topbar {
+  display: none;
+  position: fixed;
+  top: 0;
+  background-color: #004f7d;
+  color: white;
+  width: 100%;
+  height: 30px;
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 0.7;
+  z-index: 9;
 }
 
 #moreinfo_cont {
