--- a/css/main.css
+++ b/css/main.css
@@ -602,6 +602,15 @@ nav a:hover {
   margin: 0
 }
 
+.standard_table tr {
+	display: table-row;
+	cursor: pointer;
+}
+
+.exp:hover {
+  background-color: #89ccf2 !important;
+}
+
 .decorated th {
   border: 0px;
   border-bottom: 1px solid #004f7d;
@@ -739,29 +748,24 @@ nav a:hover {
   margin: 20px 0px 0px 0px;
 }
 
-.moreinfo_container {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 100px;
-  left: 0;
-  cursor: pointer;
-}
-
 .moreinfo {
-  opacity: 0;
-  -webkit-transition: opacity 0.4s ease-in-out;
-  -moz-transition:    opacity 0.4s ease-in-out;
-  -o-transition:      opacity 0.4s ease-in-out;
-  transition:         opacity 0.4s ease-in-out;
-  position: relative;
-  margin: auto;
+  display: none;
+  position: fixed;
+  top: 80px;
+  left: calc((100% - 550px) / 2);
+  margin: 0 auto;
+  padding: 0;
   width: 550px;
   height: 430px;
   background-color: #F1F9FD;
   border: solid 2px #004f7d;
   border-radius: 25px;
+  cursor: pointer;
 }
+
+.moreinfo:hover {
+  font-weight: normal;
+  }
 
 .moreinfo ul {
   margin: 0;
@@ -780,14 +784,6 @@ nav a:hover {
 .moreinfo_text {
   font-size: 15px;
   padding: 20px;
-}
-
-.moreinfo_link {
-  color: #004f7d;
-}
-
-.moreinfo_link:hover {
-  color: #6DA0BC;
 }
 
 .img150 {
@@ -1202,6 +1198,7 @@ nav a:hover {
   padding: 0px;
   border-radius: 10px;
   background: url("../images/sprites/mobile_button.png") -1px -1px;
+  cursor: pointer;
 }
 
 #navmobile a {
