--- a/css/main.css
+++ b/css/main.css
@@ -692,6 +692,12 @@ nav a:hover {
   display: inline-block;
 }
 
+.iframe {
+  border: none;
+  margin: 10px auto;
+  display: block;
+}
+
 .red_link {
   text-decoration: none;
   font-weight: bold;
